<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/padding_small">

        <TextView
            android:layout_width="@dimen/text_view_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/day_thursday"
            android:textSize="@dimen/text_size_large" />

        <ImageView
            android:layout_width="@dimen/width_icon"
            android:layout_height="@dimen/height_icon"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/icons8sun96" />

        <TextView
            android:layout_width="@dimen/text_size_small"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/weather_thursday"
            android:textSize="@dimen/padding_medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/padding_small">

        <TextView
            android:layout_width="@dimen/text_view_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/day_friday"
            android:textSize="@dimen/text_size_large" />

        <!-- Weather icon -->
        <ImageView
            android:layout_width="@dimen/width_icon"
            android:layout_height="@dimen/height_icon"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/icons8partlycloudyday100" />

        <!-- Weather details -->
        <TextView
            android:layout_width="@dimen/text_size_small"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/weather_friday"
            android:textSize="@dimen/padding_medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/padding_small">

        <TextView
            android:layout_width="@dimen/text_view_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/day_saturday"
            android:textSize="@dimen/text_size_large" />

        <!-- Weather icon -->
        <ImageView
            android:layout_width="@dimen/width_icon"
            android:layout_height="@dimen/height_icon"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/icons8clouds100" />

        <!-- Weather details -->
        <TextView
            android:layout_width="@dimen/text_size_small"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/weather_saturday"
            android:textSize="@dimen/padding_medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/padding_small">

        <TextView
            android:layout_width="@dimen/text_view_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/day_sunday"
            android:textSize="@dimen/text_size_large" />

        <!-- Weather icon -->
        <ImageView
            android:layout_width="@dimen/width_icon"
            android:layout_height="@dimen/height_icon"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/icons8rain96" />

        <!-- Weather details -->
        <TextView
            android:layout_width="@dimen/text_size_small"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/weather_sunday"
            android:textSize="@dimen/padding_medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/padding_small">

        <TextView
            android:layout_width="@dimen/text_view_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/day_monday"
            android:textSize="@dimen/text_size_large" />

        <!-- Weather icon -->
        <ImageView
            android:layout_width="@dimen/width_icon"
            android:layout_height="@dimen/height_icon"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/icons8heavyrain100" />

        <!-- Weather details -->
        <TextView
            android:layout_width="@dimen/text_size_small"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/weather_monday"
            android:textSize="@dimen/padding_medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/padding_small">

        <TextView
            android:layout_width="@dimen/text_view_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/day_tuesday"
            android:textSize="@dimen/text_size_large" />

        <!-- Weather icon -->
        <ImageView
            android:layout_width="@dimen/width_icon"
            android:layout_height="@dimen/height_icon"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/icons8storm100" />

        <!-- Weather details -->
        <TextView
            android:layout_width="@dimen/text_size_small"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/weather_tuesday"
            android:textSize="@dimen/padding_medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/padding_small">

        <TextView
            android:layout_width="@dimen/text_view_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/day_wednesday"
            android:textSize="@dimen/text_size_large" />

        <!-- Weather icon -->
        <ImageView
            android:layout_width="@dimen/width_icon"
            android:layout_height="@dimen/height_icon"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/icons8snow100" />

        <!-- Weather details -->
        <TextView
            android:layout_width="@dimen/text_size_small"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/weather_wednesday"
            android:textSize="@dimen/padding_medium" />
    </LinearLayout>

</LinearLayout>

